2003-04-23  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 18467: Src/Zle/computil.c: null pointer dereferenced with
	_arguments '*-+bar'.

	* IKEGAMI Tsutomu: SourceForge bug 722366: initialisation of pwd
	from PWD in environment didn't metafy.

2003-04-18  Oliver Kiddle  <opk@zsh.org>

	* unposted: Completion/Zsh/Context/_tilde: fix bug where 0 was
	not returned when adding a named directory as a match

	* users/6013: GoTaR <gotar@poczta.onet.pl>: Completion/Unix/Type/_ps,
	Completion/Unix/Type/_pdf, Completion/X/Command/_gqview:
	new gqview completion and complete .ps/.pdf files for more commands

2003-04-15  Oliver Kiddle  <opk@zsh.org>

	* 18443: Completion/X/Command/_dcop: new completion for dcop

2003-03-28  Wayne Davison  <wayned@users.sourceforge.net>

	* 18402: Src/builtin.c: Prevent "print -m" from crashing (it now
	complains about a missing pattern).

2003-03-25  Wayne Davison  <wayned@users.sourceforge.net>

	* 18383: Src/utils.c: Fixed zjoin() when it returns an empty
	string that should be allocated.

2003-03-14  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18351: Completion/Unix/Command/_antiword: new completion for
	antiword

2003-03-13  Oliver Kiddle  <opk@zsh.org>

	* 18347: Completion/Base/Utility/_alternative: fix problems
	with having more than one ((val\:desc ...)) style action

2003-03-12  Oliver Kiddle  <opk@zsh.org>

	* 18346: Completion/Unix/Type/_pids, Completion/Unix/Type/_users:
	complete for more commands using existing completions

2003-03-07  Peter Stephenson  <pws@csr.com>

	* 18325: Src/Modules/parameter.c: options on by default weren't
	handled correctly.

2003-02-27  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 18305: Completion/Unix/Command/_python: new completion for
	python.

2003-02-26  Clint Adams  <clint@zsh.org>

        * 18303: zshconfig.ac: fix some always-true test evaluations.

2003-02-26  Oliver Kiddle  <opk@zsh.org>

	* 18300: Completion/Unix/Command/_tar,